fixed contrast issue

--- a/styles/global.css
+++ b/styles/global.css
@@ -31,6 +31,7 @@
   --bg: #131415;
   --fg: #fafbfc;
   --gray: #888;
+  --show-more-gray: #adadad;
   --light-gray: #444;
   --lighter-gray: #222;
   --lightest-gray: #1a1a1a;
@@ -45,6 +46,7 @@
   --accents-2: #333;
   --accents-5: #a0a0a0;
   --geist-foreground: #fff;
+  --hover: #fff;
 
   /* Syntax Highlighting */
   --token: var(--lighter-accent);
@@ -58,6 +60,7 @@
   --bg: #fff;
   --fg: #1a202c;
   --gray: #666;
+  --show-more-gray:#535353;
   --light-gray: #dedede;
   --lighter-gray: #f5f5f5;
   --lightest-gray: #fafafa;
@@ -71,6 +74,7 @@
   --accents-2: #eaeaea;
   --accents-5: #595959;
   --geist-foreground: black;
+  --hover: #000;
 
   --token: var(--lighter-accent);
   --comment: #404040;
